# mentoring-cpp-dict_

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: Dictionary.h  ForwardList.h
tests/: CMakeLists.txt  test_dictionary.cpp  test_forward_list.cpp  test_unit.cpp
